chore(ci): 스테이징 배포 파이프라인에 동시 배포 방지 및 권한 설정 추가

--- a/.github/workflows/deploy-web-staging.yml
+++ b/.github/workflows/deploy-web-staging.yml
@@ -9,6 +9,16 @@ on:
       - packages/**
   workflow_dispatch:
 
+concurrency:
+  group: staging-deployment
+  cancel-in-progress: false
+
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+  security-events: write
+
 jobs:
   build-and-push:
     name: Build and Push Docker Image
