--- a/apps/web/deploy/production/Dockerfile
+++ b/apps/web/deploy/production/Dockerfile
@@ -56,6 +56,7 @@ COPY . .
 
 ARG NEXT_PUBLIC_SERVICE_URL=https://jirum-alarm.com
 ARG API_URL=http://crawling-service-lb.crawling-server.svc.cluster.local:3100
+ARG NEXT_PUBLIC_FIREBASE_VAPID_KEY=AIzaSyCpfnPqj8e_uVFTASlpumCYJ9w7R3d-8wQ
 ARG NODE_ENV=production
 
 # Build the application with cache mount
@@ -103,9 +104,11 @@ RUN addgroup --system --gid 1001 nodejs && \
 
 ARG NEXT_PUBLIC_SERVICE_URL=https://jirum-alarm.com
 ARG API_URL=http://crawling-service-lb.crawling-server.svc.cluster.local:3100
+ARG NEXT_PUBLIC_FIREBASE_VAPID_KEY=AIzaSyCpfnPqj8e_uVFTASlpumCYJ9w7R3d-8wQ
 ARG NODE_ENV=production
 ENV NEXT_PUBLIC_SERVICE_URL=${NEXT_PUBLIC_SERVICE_URL} \
     API_URL=${API_URL} \
+    NEXT_PUBLIC_FIREBASE_VAPID_KEY=${NEXT_PUBLIC_FIREBASE_VAPID_KEY} \
     NODE_ENV=${NODE_ENV} \
     PORT=3000
 
