--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "mixpanel-browser": "^2.63.0",
     "motion": "^12.6.3",
     "next": "^15.4.1",
+    "next-runtime-env": "^3.3.0",
     "nuqs": "^2.4.1",
     "posthog-js": "^1.234.9",
     "posthog-node": "^4.11.1",
