--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "code-gen": "graphql-codegen --config codegen.ts",
     "prettier-fix": "prettier --write \"./**/*.{js,ts,tsx}\" --ignore-path .gitignore --ignore-path .prettierignore ",
     "check-types": "tsc --noEmit",
     "lint": "next lint --fix",
@@ -26,6 +27,9 @@
     "react-intersection-observer": "^9.10.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@jirum/eslint-config-jirum": "workspace:*",
     "@jirum/prettier": "workspace:*",
     "@jirum/tsconfig": "workspace:*",
