--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,7 @@
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.16.0",
     "react-scroll": "^1.9.3",
+    "sharp": "^0.34.5",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
