feat: 슬랙 알림 실패해도 배포가 계속되도록 continue-on-error 추가

--- a/.github/workflows/deploy-admin-staging.yml
+++ b/.github/workflows/deploy-admin-staging.yml
@@ -112,6 +112,7 @@ jobs:
 
       - name: action-slack
         uses: 8398a7/action-slack@v3
+        continue-on-error: true
         with:
           status: ${{ job.status }}
           author_name: Github Bot (Development)
